// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchPanel searchTypeがdetailの時のスナップショットテスト 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mx-auto w-3/5"
    >
      <form
        action="/search"
        aria-label="form"
        class="flex justify-between flex-wrap"
        method="get"
      >
        <div
          class="mt-10 basis-1/2 flex-1/2"
        >
          <label
            class="inline-block w-30"
            for="name"
          >
            名前
          </label>
          <input
            class="outline-1 mr-14 w-48"
            id="name"
            max="9999999999"
            min="0"
            name="name"
            placeholder="名前入力欄"
            type="text"
            value=""
          />
          <div>
            <label
              class="mr-[104px]"
            />
          </div>
        </div>
        <div
          class="mt-10 basis-1/2 flex-1/2"
        >
          <label
            class="inline-block w-30"
            for="phone"
          >
            電話番号
          </label>
          <input
            class="outline-1 mr-14 w-48"
            id="phone"
            max="9999999999"
            min="0"
            name="phone"
            placeholder="電話番号入力欄"
            type="text"
            value=""
          />
          <div>
            <label
              class="mr-[104px]"
            />
          </div>
        </div>
        <div
          class="shrink-0 w-[785px] pt-2 -mb-3"
        >
          支払い金額
        </div>
        <div
          class="mt-10 basis-1/2 flex-1/2"
        >
          <label
            class="inline-block w-30"
            for="payment-from"
          >
            From
          </label>
          <input
            class="outline-1 mr-14 w-48"
            id="payment-from"
            max="9999999999"
            min="0"
            name="payment-from"
            placeholder="金額入力欄"
            type="text"
            value=""
          />
          <div>
            <label
              class="mr-[104px]"
            />
          </div>
        </div>
        <div
          class="mt-10 basis-1/2 flex-1/2"
        >
          <label
            class="inline-block w-30"
            for="payment-to"
          >
            To
          </label>
          <input
            class="outline-1 mr-14 w-48"
            id="payment-to"
            max="9999999999"
            min="0"
            name="payment-to"
            placeholder="金額入力欄"
            type="text"
            value=""
          />
          <div>
            <label
              class="mr-[104px]"
            />
          </div>
        </div>
        <div
          class="mt-10 mx-auto "
        >
          <button
            class="cursor-pointer  
                
                text-blue-500 hover:text-gray-300 underline inline-block mr-22 text-left hover:!bg-transparent
                
                 hover:bg-blue-600  
                "
            type="button"
          >
            help
          </button>
          <button
            class="cursor-pointer  
                outline-1 w-48 text-left flex-1/2
                
                
                opacity-50 !cursor-not-allowed bg-gray-500 
                "
            disabled=""
            type="submit"
          >
            検索
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchPanel スナップショットテスト 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mx-auto w-3/5"
    >
      <form
        action="/search"
        aria-label="form"
        class="flex justify-between flex-wrap"
        method="get"
      >
        <div
          class="mt-10 basis-1/2 flex-1/2"
        >
          <label
            class="inline-block w-30"
            for="name"
          >
            名前
          </label>
          <input
            class="outline-1 mr-14 w-48"
            id="name"
            max="9999999999"
            min="0"
            name="name"
            placeholder="名前入力欄"
            type="text"
            value=""
          />
          <div>
            <label
              class="mr-[104px]"
            />
          </div>
        </div>
        <div
          class="mt-10 basis-1/2 flex-1/2"
        >
          <label
            class="inline-block w-30"
            for="phone"
          >
            電話番号
          </label>
          <input
            class="outline-1 mr-14 w-48"
            id="phone"
            max="9999999999"
            min="0"
            name="phone"
            placeholder="電話番号入力欄"
            type="text"
            value=""
          />
          <div>
            <label
              class="mr-[104px]"
            />
          </div>
        </div>
        <div
          class="mt-10 basis-1/2 flex-1/2"
        >
          <label
            class="inline-block w-30"
            for="address"
          >
            郵便番号
          </label>
          <input
            class="outline-1 mr-14 w-48"
            id="address"
            max="9999999999"
            min="0"
            name="address"
            placeholder="郵便番号入力欄"
            type="text"
            value=""
          />
          <div>
            <label
              class="mr-[104px]"
            />
          </div>
        </div>
        <div
          class="mt-10 flex-1/2 "
        >
          <button
            class="cursor-pointer  
                
                text-blue-500 hover:text-gray-300 underline inline-block mr-22 text-left hover:!bg-transparent
                
                 hover:bg-blue-600  
                "
            type="button"
          >
            help
          </button>
          <button
            class="cursor-pointer  
                outline-1 w-48 text-left flex-1/2
                
                
                opacity-50 !cursor-not-allowed bg-gray-500 
                "
            disabled=""
            type="submit"
          >
            検索
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
